2008-06-07  Mark Ellis  <mark@mpellis.org.uk>

	* more useful error messages for pls and pcp

2008-05-19  Mark Ellis  <mark@mpellis.org.uk>

	* rewrite rapi 1 CeReadRecordProps() and CeWriteRecordProps() to
	  account for non-32 bit host pointers

2008-05-11  Mark Ellis  <mark@mpellis.org.uk>

	* remaining dummy functions for unimplemented calls

2008-05-09  Mark Ellis  <mark@mpellis.org.uk>

	* introduced dummy functions for most calls represented in the
	  header but not implemented, returns failure with rapi error
	  set to E_NOTIMPL instead of segfaulting
	* in rapi 1, pass result_2 into rapi error, this is an HRESULT

2008-05-09  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* script/synce-remove-program.1: Escaped minus signs so they're not
	hyphens. Notified by lintian.

2008-05-06  Mark Ellis  <mark@mpellis.org.uk>

	* fixed compiler warnings

2008-04-22  Mark Ellis  <mark@mpellis.org.uk>

	* implemented CeFindNextFile() & CeFindClose() in rapi2

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* script/synce-install-cab.1:
	* script/synce-remove-program.1:
	* tools/man/pcp.1:
	* tools/man/pkillall.1:
	* tools/man/pls.1:
	* tools/man/pmkdir.1:
	* tools/man/pmv.1:
	* tools/man/prm.1:
	* tools/man/prmdir.1:
	* tools/man/prun.1:
	* tools/man/psettime.1:
	* tools/man/pshortcut.1:
	* tools/man/pstatus.1:
	* tools/man/rapiconfig.1:
	* tools/man/synce-list-programs.1:
	* tools/man/synce-registry.1: Escaped minus signs so they're not
	hyphens. Notified by lintian: hyphen-used-as-minus-sign. 

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* Removed spec file.

2008-04-11  Mark Ellis  <mark@mpellis.org.uk>

	* modified rapi_context_connect() to deal with version 5.0
	  that is actually WM2003

2008-04-01  Mark Ellis  <mark@mpellis.org.uk>

	* dummy function for rapi1 CeGetDiskFreeSpaceEx, prevents segfault
	  when this is called

2008-03-26  Mark Ellis  <mark@mpellis.org.uk>

	* correct build without python bindings (bug 1708885)
